--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,42 @@
 header{
-    font-family:sans-serif;
+  font-family:sans-serif;
 	height: 3em;
-	color: blue;
-    text-align: center;
+	color:aqua;
+  text-align: center;
+}
+
+body{
+  background-image: url(../images/bg4.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .pantalla{
     display: flex;
     justify-content: center;
-    margin-top: 100px;
 }
 
+.input-text{
+  width: 100%;
+  max-width: 600px;
+  padding: 50px 30px;
+  margin: 20px auto 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+input[type=text] {
+  width: 40%;
+  padding: 10px 10px;
+  margin: 10px auto 20PX;
+  box-sizing: border-box;
+  font-family: system-ui,-apple-system,system-ui,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
+  font-size: 14px;
+  text-align: center;
+}
 
 /* CSS */
 .button-71 {
@@ -21,7 +47,7 @@ header{
   cursor: pointer;
   display: inline-block;
   font-family: system-ui,-apple-system,system-ui,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 600;
   outline: 0;
   padding: 16px 21px;
@@ -58,3 +84,4 @@ header{
     padding: 16px 48px;
   }
 }
+
